deploy/models/deepseek-r1-32b/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deepseek-r1-32b-route
  namespace: token-labs
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: token-labs-gateway
    namespace: token-labs
  rules:
  - backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: gaie-deepseek-r1-32b
      port: 8000
    matches:
    - headers:
      - name: x-ai-eg-model
        type: Exact
        value: deepseek-ai/DeepSeek-R1-Distill-Qwen-32B
      path:
        type: PathPrefix
        value: /v1/
    timeouts:
      request: 600s
